2006-04-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/playback/gstplaybasebin.c: (mute_stream), (setup_substreams):
	  Don't remove our mute-probe if someone else already did so.
	  Don't set a 2nd one if there is already one pending on the pad.

	* gst/playback/gstplaybin.c: (gst_play_bin_send_event_to_sink),
	(do_playbin_seek):
	  When a seek fails, ensure that playbin is still set back to playing.
	  
	* gst/typefind/gsttypefindfunctions.c: (mpeg_ts_probe_headers),
	(mpeg_ts_type_find), (plugin_init):
	  Add a typefind function for mpeg-ts streams.

2006-04-06  Andy Wingo  <wingo@pobox.com>

	* gst/videorate/gstvideorate.c (gst_video_rate_reset) 
	(gst_video_rate_init): Caps-related parameters should not be reset
	by a flush -- move their inits to the instance init function.
	(gst_video_rate_flush_prev): Don't complain if gst_pad_push
	is not OK, just return the result.

	* gst/audiotestsrc/gstaudiotestsrc.c
	(gst_audio_test_src_class_init)
	(gst_audio_test_src_get_times): Re-enable is-live=true, as was
	broken by Stefan's commit on 24 March.

	* ext/ogg/gstoggmux.c (gst_ogg_mux_push_buffer): Set caps on
	buffers being pushed out. Fixes oggmux ! multifdsink.

2006-04-05  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_class_init),
	(gst_vorbis_dec_init), (vorbis_dec_finalize):
	* ext/vorbis/vorbisdec.h:
	* ext/vorbis/vorbisenc.c: (gst_vorbis_enc_add_interfaces),
	(gst_vorbis_enc_base_init), (gst_vorbis_enc_class_init),
	(gst_vorbis_enc_sink_setcaps), (gst_vorbis_enc_convert_src),
	(gst_vorbis_enc_convert_sink), (gst_vorbis_enc_get_query_types),
	(gst_vorbis_enc_src_query), (gst_vorbis_enc_sink_query),
	(gst_vorbis_enc_init), (gst_vorbis_enc_get_tag_value),
	(gst_vorbis_enc_metadata_set1), (gst_vorbis_enc_set_metadata),
	(gst_vorbis_enc_setup), (gst_vorbis_enc_clear),
	(gst_vorbis_enc_buffer_from_packet),
	(gst_vorbis_enc_buffer_from_header_packet),
	(gst_vorbis_enc_push_buffer), (gst_vorbis_enc_push_packet),